--- a/Views/Products/Create.cshtml
+++ b/Views/Products/Create.cshtml
@@ -97,7 +97,7 @@
         <div id="container" class="form-group"></div>
 
         <div class="form-group">
-            <input id="AddAtribute" class="btn" type="button" value="Voeg Product eigenchap toe" onclick="addFields()" />
+            <input id="AddAtribute" class="btn btn-primary" type="button" value="Voeg Product eigenchap toe" onclick="addFields()" />
         </div>
         <div class="form-group">
             <hr>
