--- a/Views/Products/Create2.cshtml
+++ b/Views/Products/Create2.cshtml
@@ -31,22 +31,23 @@
 			window.onload = addFields;
     </script>
 <div class="pageRoot">
-    <h4>Products</h4>
+    <h4>Product toevoegen</h4>
     <hr />
+    <h4>Voeg producten toe aan de webshop</h4>
     <div class="row">
         <div class="col-md-4">
             @ViewData["message"]
             <form action="@Url.Action("Create3", "Products")" method="get">
                 <div id="container" class="form-group"></div>
                 <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                    <input type="submit" value="Toevoegen" class="btn btn-primary" />
                 </div>
             </form>
         </div>
     </div>
 
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Create">Terug naar categorie aanmaken</a>
     </div>
 </div>
 @section Scripts {
