Footer altijd onderaan, links in footer werken

--- a/Views/FooterPages/Klantenservice.cshtml
+++ b/Views/FooterPages/Klantenservice.cshtml
@@ -1,15 +1,14 @@
-﻿@using WebApp1.Models
-@model WebApp1.Models.Datastructure
-@{
-    ViewData["Title"] = "";
-    List<Productwaarde> products = Model.productwaardes.ToList();
-}
-
-<link rel="stylesheet" href="~/css/interactiveimage.css">
+﻿<link rel="stylesheet" href="~/css/interactiveimage.css">
 <link rel="stylesheet" href="~/css/mainpage.css">
 <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
 <div class="section">
   <h1>Klantenservice</h1>
+
+  <p>
+    Klachten en klachtentermijn:
+    Omdat wij onze klanten een optimale service willen verlenen, vinden wij het belangrijk van u te horen als u klachten heeft over onze dienstverlening. Doe dit- mede om eventuele schade te beperken – zo snel mogelijk. Volgens de wet is een klacht op tijd kenbaar gemaakt als dit binnen twee maanden na ontdekking gebeurt. Dit geldt ook in het geval dat het gekochte product niet de eigenschappen heeft die u op grond van de koopovereenkomst mocht verwachten. Het is in uw belang om uw klachten schriftelijk kenbaar te maken.
+    Als u een klacht bij ons indient, zal die uiterlijk binnen 14 dagen worden beantwoord. Hebben wij daarvoor meer tijd nodig, dan laten wij u binnen 14 dagen weten wanneer u antwoord kun verwachten. Klachten kunnen verstuurd worden naar: klachten@bananaboat.nl o.v.v. uw klantnummer en de klacht. 
+  </p>
 </div>
