--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -124,22 +124,22 @@
         <div class="footerItem">
             <ul>
                 <li>
-                    <b><a >Klantenservice</a></b>
+                    <b><a asp-action="Klantenservice" asp-controller="FooterPages">Klantenservice</a></b>
                     <ul>
                         <li class="footerLi">
-                            <a>Contact</a>
+                            <a asp-action="Contact" asp-controller="FooterPages">Contact</a>
                         </li>
                         <li class="footerLi">
-                            <a>Bestellen & Leveren</a>
+                            <a asp-action="Bestellen" asp-controller="FooterPages">Bestellen & Leveren</a>
                         </li>
                         <li class="footerLi">
-                            <a asp-action="betalen" asp-controller="FooterPages">Betalen</a>
+                            <a asp-action="Betalen" asp-controller="FooterPages">Betalen</a>
                         </li>
                         <li class="footerLi">
-                            <a>Retourneren</a>
+                            <a asp-action="Retourneren" asp-controller="FooterPages">Retourneren</a>
                         </li>
                         <li class="footerLi">
-                            <a>Garantie & Reparatie</a>
+                            <a asp-action="Garantie" asp-controller="FooterPages">Garantie & Reparatie</a>
                         </li>
                     </ul>
                 </li>
@@ -148,10 +148,10 @@
         <div class="footerItem">
             <ul>
                 <li>
-                    <b><a>Over Ons</a></b>
+                    <b><a asp-action="Over" asp-controller="FooterPages">Over Ons</a></b>
                     <ul>
                         <li class="footerLi">
-                            <a>De voordelen van SailingBoys</a>
+                            <a asp-action="Voordelen" asp-controller="FooterPages">De voordelen van Banana Boat</a>
                         </li>
                     </ul>
                 </li>
