--- a/Views/FooterPages/Betalen.cshtml
+++ b/Views/FooterPages/Betalen.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-<link rel="stylesheet" href="~/css/interactiveimage.css">
+﻿<link rel="stylesheet" href="~/css/interactiveimage.css">
 <link rel="stylesheet" href="~/css/mainpage.css">
 <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
