--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -142,12 +142,12 @@ const ul = menuToElement(item);
   document.getElementById("menu").appendChild(ul);
   
 }
-else if (item.name == "Roeiboot"){
+else if (item.name == "Speedboot"){
   const ul2 = menuToElement(item);
   document.getElementById("menu2").appendChild(ul2);
 }
 
-else if (item.name == "Schip"){
+else if (item.name == "Sloep"){
   const ul3 = menuToElement(item);
   document.getElementById("menu3").appendChild(ul3);
 }
