Fixed footer affecting all <a> elements

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -125,22 +125,22 @@
         <div class="footerItem">
             <ul>
                 <li>
-                    <b><a asp-action="Klantenservice" asp-controller="FooterPages">Klantenservice</a></b>
+                    <b><a class="footerLink" asp-action="Klantenservice" asp-controller="FooterPages">Klantenservice</a></b>
                     <ul>
                         <li class="footerLi">
-                            <a asp-action="Contact" asp-controller="FooterPages">Contact</a>
+                            <a class="footerLink" asp-action="Contact" asp-controller="FooterPages">Contact</a>
                         </li>
                         <li class="footerLi">
-                            <a asp-action="Bestellen" asp-controller="FooterPages">Bestellen & Leveren</a>
+                            <a class="footerLink" asp-action="Bestellen" asp-controller="FooterPages">Bestellen & Leveren</a>
                         </li>
                         <li class="footerLi">
-                            <a asp-action="Betalen" asp-controller="FooterPages">Betalen</a>
+                            <a class="footerLink" asp-action="Betalen" asp-controller="FooterPages">Betalen</a>
                         </li>
                         <li class="footerLi">
-                            <a asp-action="Retourneren" asp-controller="FooterPages">Retourneren</a>
+                            <a class="footerLink" asp-action="Retourneren" asp-controller="FooterPages">Retourneren</a>
                         </li>
                         <li class="footerLi">
-                            <a asp-action="Garantie" asp-controller="FooterPages">Garantie & Reparatie</a>
+                            <a class="footerLink" asp-action="Garantie" asp-controller="FooterPages">Garantie & Reparatie</a>
                         </li>
                     </ul>
                 </li>
@@ -149,10 +149,10 @@
         <div class="footerItem">
             <ul>
                 <li>
-                    <b><a asp-action="Over" asp-controller="FooterPages">Over Ons</a></b>
+                    <b><a class="footerLink" asp-action="Over" asp-controller="FooterPages">Over Ons</a></b>
                     <ul>
                         <li class="footerLi">
-                            <a asp-action="Voordelen" asp-controller="FooterPages">De voordelen van Banana Boat</a>
+                            <a class="footerLink" asp-action="Voordelen" asp-controller="FooterPages">De voordelen van Banana Boat</a>
                         </li>
                     </ul>
                 </li>
