fix add to cart

--- a/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -11,7 +11,7 @@
 <h2>@ViewData["Title"]</h2>
 <div>
     <p>
-        Bedankt voor de bevestiging.
+        Bedankt voor de bevestiging. <a asp-page="./Login">Klik hier om in te loggen</a>.
     </p>
 </div>
 </div>
