--- a/wwwroot/css/layout.css
+++ b/wwwroot/css/layout.css
@@ -32,7 +32,7 @@ html {
 body {
     position: relative;
     margin: 0;
-    padding-bottom: 10rem;
+    padding-bottom: 20%;
     min-height: 100%;
     font-family: "Helvetica Neue", Arial, sans-serif;
 }
