--- a/Views/ProductList/Index.cshtml
+++ b/Views/ProductList/Index.cshtml
@@ -67,3 +67,4 @@
 </div>
 <br>
 <script type="module" src="~/js/loadProductsList.js"></script>
+<script type="module" src="~/js/categoryPopover.js"></script>
