--- a/wwwroot/css/layout.css
+++ b/wwwroot/css/layout.css
@@ -148,5 +148,18 @@ a.paginationJumpTo > i {
 
 a.paginationJumpTo:hover {
     cursor: pointer;
-    transition: 0.1s;
+    text-decoration: underline !important;
+    transition: 1s;
+}
+
+div.popover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.popover-body>form>select {
+    text-align-last: center;
+}
+
+.popover-header {
+    text-align: center;
 }
