--- a/Views/Cart/oldOrders.cshtml
+++ b/Views/Cart/oldOrders.cshtml
@@ -46,36 +46,55 @@
         </tbody>
     </table>
     <br>
-    <ul class="pagination">
+        <div class="pagination flex-wrap">
         @if (Model.PageNumber == 1)
         {
             <li class="page-item disabled">
-                <a class="page-link"  tabindex="-1">Vorige</a>
+                <a class="page-link" tabindex="-1">Vorige</a>
             </li>
         }
         else
         {
             <li class="page-item">
+                <a class="page-link" asp-action="oldOrders" asp-route-pageNumber="1" data-toggle="tooltip" data-placement="top" title="Naar begin">«</a>
+            </li>
+            <li class="page-item">
                 <a class="page-link" asp-action="oldOrders" asp-route-pageNumber="@(Model.PageNumber - 1)">Vorige</a>
             </li>
         }
-        @for (int i = 0; i < Model.TotalPages; i++)
+        @for (int i = Model.PageNumber - 3; i <= Model.PageNumber - 1; i++)
         {
-            if ((i + 1) == Model.PageNumber)
+            if (i < 1)
             {
-                <li class="page-item active">
-                    <a class="page-link" asp-action="oldOrders" asp-route-pageNumber="@(i + 1)">@(i + 1) <span class="sr-only">current</span></a>
-                </li>
+                continue;
             }
-            else
+            <li class="page-item">
+                <a class="page-link" asp-action="oldOrders" asp-route-pageNumber="@i">@i</a>
+            </li>
+        }
+
+        <li class="page-item active">
+            <a class="page-link" asp-action="oldOrders" asp-route-pageNumber="@Model.PageNumber">
+
+                @Model.PageNumber <span class="sr-only">current</span>
+
+            </a>
+        </li>
+
+        @for (int i = Model.PageNumber + 1; i <= Model.PageNumber + 3; i++)
+        {
+            if (i > Model.TotalPages)
             {
-                <li class="page-item"><a class="page-link" asp-action="oldOrders" asp-route-pageNumber="@(i + 1)">@(i + 1)</a></li>
+                continue;
             }
+            <li class="page-item">
+                <a class="page-link" asp-action="oldOrders" asp-route-pageNumber="@i">@i</a>
+            </li>
         }
         @if (Model.PageNumber == Model.TotalPages)
         {
             <li class="page-item disabled">
-                <a class="page-link"  tabindex="-1">Volgende</a>
+                <a class="page-link" tabindex="-1">Volgende</a>
             </li>
         }
         else
@@ -83,6 +102,26 @@
             <li class="page-item">
                 <a class="page-link" asp-action="oldOrders" asp-route-pageNumber="@(Model.PageNumber + 1)">Volgende</a>
             </li>
+            <li class="page-item">
+                <a class="page-link" asp-action="oldOrders" asp-route-pageNumber="@Model.TotalPages" data-toggle="tooltip" data-placement="top" title="Naar einde">»</a>
+            </li>
         }
-    </ul>
+        <a id="categoryPageJumper" class="paginationJumpTo"  role="button" title='Spring naar pagina:' data-toggle="popover" data-placement="top" data-html="true" data-content="">
+            Pagina @Model.PageNumber van @Model.TotalPages
+            <i class="inline-icon material-icons">
+                arrow_drop_down
+            </i>
+        </a>
+        <div id="popover-content" style="display: none;">
+            <form action="@Url.Action("oldOrders", "cart")">
+                <select class="form-control" name="pageNumber">
+                    @for (int i = 1; i <= Model.TotalPages; i++)
+                    {
+                        <option value="@i">@i</option>
+                    }
+                </select><br>
+                <button type="submit" class="btn btn-primary btn-block">Ga</button>
+            </form>
+        </div>
+    </div>
 </div>
