--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -18,8 +18,8 @@
             
             <div class="form-group">
                 <label asp-for="Input.Gender"></label><br>   
-                <input type="radio" name="gender" value="male" checked> Meneer<br>
-                <input type="radio" name="gender" value="female"> Mevrouw<br>
+                <input type="radio" name="Input.Gender" value="male"> Meneer<br>
+                <input type="radio" name="Input.Gender" value="female"> Mevrouw<br>
                 <span asp-validation-for="Input.Gender" class="text-danger"></span>
             </div>
              <div class="form-group">
