--- a/Views/UserManagement/updateInfoAdmin.cshtml
+++ b/Views/UserManagement/updateInfoAdmin.cshtml
@@ -23,6 +23,21 @@
                 <input asp-for=" LastName" class="form-control" />
                 <span asp-validation-for=" LastName" class="text-danger"></span>
             </div>
+            @if(Model.Gender == "male"){
+                <div class="form-group">
+                <label asp-for="Geslacht">Geslacht</label><br>   
+                <input type="radio" name="gender" value="male" checked> Meneer<br>
+                <input type="radio" name="gender" value="female"> Mevrouw<br>
+                <span asp-validation-for="Gender" class="text-danger"></span>
+            </div>
+            }else{
+                <div class="form-group">
+                <label asp-for="Geslacht">Geslacht</label><br>   
+                <input type="radio" name="gender" value="male"> Meneer<br>
+                <input type="radio" name="gender" value="female" checked> Mevrouw<br>
+                <span asp-validation-for="Gender" class="text-danger"></span>
+            </div>
+            }
             <div class="form-group">
                 <label asp-for=" Street"></label>
                 <input asp-for=" Street" class="form-control" />
@@ -48,6 +63,11 @@
                 <input asp-for=" HouseNumber" class="form-control" />
                 <span asp-validation-for=" HouseNumber" class="text-danger"></span>
             </div> 
+            <div class="form-group">
+                <label asp-for=" TelephoneNumber">Telefoon Nummer</label>
+                <input asp-for=" TelephoneNumber" class="form-control" />
+                <span asp-validation-for=" TelephoneNumber" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for=" Email"></label>
                 <input asp-for=" Email" class="form-control" />
