Footer content added

--- a/Views/FooterPages/Bestellen.cshtml
+++ b/Views/FooterPages/Bestellen.cshtml
@@ -5,4 +5,21 @@
 
 <div class="section">
   <h1>Bestellen & Leveren</h1>
+  <br>
+  <h2 style="margin:10px;">Bestellen via de website</h2>
+  <h3 style="color:red; margin:10px;">Op werkdagen voor 22.00 uur online besteld, de volgende dag in huis!</h3>
+  <br>
+  <p class="footerP">
+
+    Bij bestellen via de website heeft u altijd de keuze om uw bestelling te laten verzenden of om deze af te halen. Bestellen via de website betekent dus niet automatisch dat uw bestelling verzonden wordt.
+    <br>
+    
+    Bij alle artikelen staat een winkelmandje afgebeeld. Indien u hierop klikt voegt u het betreffende artikel toe aan uw winkelmandje. Er wordt een venster geopend, waarin u een overzicht te zien krijgt van de door u toegevoegde artikelen. In dit overzicht kunt u opgeven hoeveel artikelen u wilt hebben. Vervolgens kunt u verder winkelen en elk gewenst artikel op dezelfde wijze toevoegen aan uw winkelmandje.
+  </p>
+
+  <br>
+  <h2 style="margin:10px;">Orderontvangstbevestiging</h2>
+  <p class="footerP">
+    Na het plaatsen van een bestelling via de website ontvangt u een orderontvangstbevestiging. Dit betekent dat wij uw bestelling ontvangen hebben. Nadat uw bestelling door ons is gecontroleerd en in behandeling is genomen ontvangt u een orderbevestiging.  
+  </p>
 </div>
