--- a/Views/FooterPages/Betalen.cshtml
+++ b/Views/FooterPages/Betalen.cshtml
@@ -5,4 +5,34 @@
 
 <div class="section">
   <h1>Betalen</h1>
+  <br>
+  <h2 style="margin:10px;">Betalingsmogelijkheden</h2>
+  <br>
+  <h3 style="margin:10px;">Bestelling in onze webwinkel</h3>
+  <p class="footerP">
+    Als u via de website bestelt kunt u betalen via iDeal, PayPal en Creditcard
+        Aan de verschillende betaalmethoden zijn in sommige gevallen extra kosten verbonden.
+  </p>
+
+  <p class="footerP">
+    <strong>iDeal</strong>
+    <br>
+    Nederlandse bankrekeninghouders kunnen heel eenvoudig en betrouwbaar betalen via iDeal. Bij het afrekenen van de bestelling kunt u aangeven dat u met iDEAL wenst te betalen. Klik dan op de iDEAL-betaalknop en selecteer uw bank. Vervolgens wordt u doorgeleid naar uw eigen bank waar de betaalopdracht voor u klaar staat. U wordt door uw bank gevraagd een aantal gegevens in te vullen en u autoriseert de betaling. Het bedrag wordt direct van uw bankrekening afgeschreven en Informatique wordt geïnformeerd dat de bestelling is betaald.
+  </p>
+
+  <p class="footerP">
+    <strong>PayPal</strong>
+    <br>
+    Veilig en snel betalen doet u met PayPal. Allereerst moet u een gratis PayPal rekening openen op 
+    <a href="http://www.paypal.com" target="_blank">PayPal.com</a>
+    en uw bankrekening aan uw account koppelen. U bestelt vervolgens een product zodat u een betaalverzoek van PayPal ontvangt. Door dit betaalverzoek te accepteren met de inloggegevens van PayPal kunt u betalen.
+    Aan betaling met PayPal zijn extra kosten verbonden: € 0,10 + 1,5% van het totaalbedrag.  
+  </p>
+
+  <p class="footerP">
+    <strong>Creditcard</strong>
+    <br>
+    U kunt bij zowel een online bestelling als bij onze afhaalbalie betalen met uw creditcard. Aan een creditcard betaling zijn extra kosten verbonden: 3% van het totaalbedrag. In Steenbergen kan niet met creditcard worden betaald.
+  </p>
+
 </div>
