--- a/Views/FooterPages/Contact.cshtml
+++ b/Views/FooterPages/Contact.cshtml
@@ -5,4 +5,9 @@
 
 <div class="section">
   <h1>Contact</h1>
+  <br>
+  <p class="footerP">
+    Heeft u een vraag of een opmerking? Wij helpen u graag verder! 
+    U kunt ons bereiken hget e-mailadres <a href="">klantenservice@bananaboat.nl</a>.
+  </p>
 </div>
