--- a/Views/FooterPages/Over.cshtml
+++ b/Views/FooterPages/Over.cshtml
@@ -5,7 +5,8 @@
 
 <div class="section">
   <h1>Over Ons</h1>
-  <p>
-    Banana Boat is van oudsher één van de grotere online leveranciers van boten in Europa. In de loop van de jaren is het assortiment steeds verder uitgebreid met aanverwante producten als bootaccessoires. Tegenwoordig worden vanuit logistieke centra in Duitsland, Nederland en België alle landen in Europa beleverd, zowel rechtstreeks naar de eindgebruiker of als fulfilmentpartner voor andere verkopers. Banana Boat is daarmee één van de meest succesvolle boot verkoper in haar branche. 
+  <br>
+  <p class="footerP">
+    Banana Boat is van oudsher één van de grotere online leveranciers van boten in Europa. In de loop van de jaren is het assortiment steeds verder uitgebreid met aanverwante producten als bootaccessoires. Tegenwoordig worden vanuit logistieke centra in Duitsland, Nederland en België alle landen in Europa beleverd, zowel rechtstreeks naar de eindgebruiker of als fulfilmentpartner voor andere verkopers. Banana Boat is daarmee één van de meest succesvolle boot verkopers in haar branche. 
   </p>
 </div>
