--- a/Views/FooterPages/Retourneren.cshtml
+++ b/Views/FooterPages/Retourneren.cshtml
@@ -5,6 +5,58 @@
 
 <div class="section">
   <h1>Retourneren</h1>
+  <br>
+  <p class="footerP">Het kan natuurlijk altijd gebeuren dat een product niet aan uw verwachtingen voldoet. </p>
 
-  <p>Retourneren is niet mogelijk.</p>
+  <p class="footerP">
+    Als het een online bestelling betreft, dan volgen wij de 
+    <u>wet koop op afstand</u>
+    en heeft u 14 dagen bedenktijd. Deze bedenktijd gaat in vanaf het moment dat het product in uw bezit is. Binnen de bedenktermijn kunt u de producten retourneren of aangeven dat u van de bestelling afziet (dit heet herroepen).
+		Dit kan door ons er schriftelijk (bijvoorbeeld per post of e-mail) van op de hoogte te stellen. Na herroeping heeft u nog 14 dagen de tijd om het product / de producten te retourneren.
+  </p>
+
+  <p class="footerP">
+    <b><u>Omgang:</u></b>
+    <br>
+    Om voor het retour sturen van een bestelling in aanmerking te komen dient het product met alle geleverde toebehoren, in de originele staat en met -voor zover redelijkerwijs mogelijk- onbeschadigde verpakking geretourneerd te worden.
+    <br>
+    Indien dit niet het geval is zal er een deelvergoeding worden berekend waarvan de hoogte afhankelijk is van de staat van het product.
+    <br>
+    <br>
+    Een printer mag u bijvoorbeeld uit de doos halen en bekijken. Mocht u de cartridges of toners echter plaatsen dan, kunnen wij de printer niet meer als nieuw verkopen. De waardevermindering die daardoor is ontstaan zullen we verrekenen met het terug te storten bedrag.    
+  </p>
+
+  <p class="footerP">
+    <b><u>Aankoopbedrag retour na ontbinding</u></b>
+    <br>
+    • U ontvangt het aankoopbedrag, inclusief eventuele verzendkosten voor de heenzending, wanneer u de koop ontbonden heeft, zo spoedig mogelijk van ons retour, maar uiterlijk binnen 14 dagen.
+		<br>
+    • Wij mogen wachten met terugbetaling tot wij de goederen hebben teruggekregen, of u heeft aangetoond dat u de goederen heeft teruggezonden, al naar gelang welk tijdstip eerst valt
+  </p>
+
+  <p class="footerP">
+    <b><u>Aankoopbedrag retour na ontbinding</u></b>
+    <br>
+    • U ontvangt het aankoopbedrag, inclusief eventuele verzendkosten voor de heenzending, wanneer u de koop ontbonden heeft, zo spoedig mogelijk van ons retour, maar uiterlijk binnen 14 dagen.
+		<br>
+    • Wij mogen wachten met terugbetaling tot wij de goederen hebben teruggekregen, of u heeft aangetoond dat u de goederen heeft teruggezonden, al naar gelang welk tijdstip eerst valt	
+  </p>
+
+  <p class="footerP">
+    <b><u>Retourprocedure:</u></b>
+    <br>
+    • Indien u dit nog niet heeft gedaan, verzoeken we u bij een verkeerd geleverd product en/of garantie afhandeling eerst contact op te nemen met onze klantenservice via <a href="">klantenservice@bananaboat.nl</a>.
+    <br>
+    • Voor een adequate afhandeling verzoeken wij u een ingevuld retourformulier bij te voegen.
+    <br>
+    • Het retour zenden is voor risico van de verzender.
+    <br>
+    • Zorg voor een gedegen omverpakking.
+    <br>
+    • Stuur enkel producten retour indien deze compleet zijn.
+    <br>
+    • Zorg dat u uw zending voldoende frankeert.    
+    </p>
+
+
 </div>
