--- a/Views/FooterPages/Voordelen.cshtml
+++ b/Views/FooterPages/Voordelen.cshtml
@@ -5,4 +5,20 @@
 
 <div class="section">
   <h1>De voordelen van Banana Boat</h1>
+  <br>
+  <h2 style="margin:10px">Kies het bezorgmoment dat jou uitkomt</h2>
+  <p class="footerP">
+    Werp een blik op je kalender. Laat je bestelling bezorgen op een datum die jou het beste uitkomt.
+  </p>
+  <br>
+  <h2 style="margin:10px">Avondbezorging</h2>
+  <p class="footerP">
+    Van maandag t/m vrijdag bezorgen we tussen 18:00 en 22:00 uur, als je de dag ervoor bestelt.
+  </p>
+  <br>
+  <h2 style="margin:10px">Zondagbezorging</h2>
+  <p class="footerP">
+    Bezorgen op zondag. Komt zondag jou het beste uit om je pakketje in ontvangst te nemen? Dat kan ook.
+  </p>
+
 </div>
