--- a/Views/FooterPages/Garantie.cshtml
+++ b/Views/FooterPages/Garantie.cshtml
@@ -5,4 +5,21 @@
 
 <div class="section">
   <h1>Garantie & Reparatie</h1>
+  <br>
+  <h2 style="margin: 10px;">Garantietermijn</h2>
+  <p class="footerP">
+    
+    Alle producten hebben een standaard fabrieksgarantie variërend van een jaar tot levenslang. De fabrieksgarantie geldt naast de wettelijke garantie. Mocht een product defect zijn of gaan, neem dan contact op met onze klantenservice via <a href="">klantenservice@bananaboat.nl</a>. 
+    Afhankelijk van het product zoeken wij dan samen met u naar een passende oplossing.
+  </p>
+  <h2 style="margin: 10px;">Afwijkende voorwaarden voor dealers</h2>
+  <p class="footerP">
+    
+    <p class="footerP">
+      Voor dealers hanteren wij een Informatique garantie van 1 jaar. Daarbuiten kunnen dealers aanspraak maken op de fabrieksgarantie door direct in contact te treden met de betreffende fabrikant. Uiteraard kan Informatique ook na het eerste jaar faciliteren in het claimen van garantie, maar het kan zijn dat hier dan kosten aan verbonden zijn.
+    </p>
+    <p class="footerP">
+      Wij gaan ervan uit dat dealers zelf een product testen op een defect. Mocht een product niet defect zijn, dan zijn wij helaas genoodzaakt om kosten voor het testen in rekening te brengen.
+    </p>
+  </p>
 </div>
